# Fatsecret_project

./: README.md
Fatsecret/: CHANGELOG.md  CONTRIBUTING.md  Presentation.ipynb  README.md  pyproject.toml  setup.ipynb  setup.py
Fatsecret/docs/: Makefile  conf.py  example.ipynb  make.bat
Fatsecret/src/Fat_Secret_pkg/: Fat_Secret_pkg.py
Fatsecret/src/final_project_for_mds/: __init__.py
Fatsecret/tests/: Fat_Secret_pkg.py  test_final_project_for_mds.py
