[tool.poetry]
name = "final_project_for_mds"
version = "0.1.0"
description = "A fatsecret's python wrapper"
authors = ["Siyu Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
